# OxSchnick

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  flake.nix
assets/: style.css
migrations/2025-11-18-193403-0000_create_users/: up.sql
migrations/2025-12-02-140918-0000_create_schnicks/: down.sql  up.sql
migrations/2025-12-15-093213-0000_create_metrics/: down.sql  up.sql
migrations/2025-12-15-093213-0000_create_streaks/: down.sql  up.sql
src/: app.rs  auth.rs  error.rs  events.rs  graphs.rs  home.rs  invite.rs  main.rs  matches.rs  metrics.rs  router.rs  schema.rs  schnick.rs  schnicks.rs  session.rs  settings.rs  state.rs  username.rs  users.rs
src/routes/: about.rs  assets.rs  graphs.rs  home.rs  index.rs  invite.rs  metrics.rs  mod.rs  recovery.rs  schnick.rs  settings.rs  setup.rs
templates/: about_us.html  accept_invite.html  base.html  error.html  form.html  form_empty.html  global.html  graph.html  graphs.html  home.html  imprint.html  index.html  invite.html  logged_in.html  metrics.html  metrics_num_invites.html  metrics_num_schnicks.html  metrics_score.html  metrics_streak.html  nav.html  qrcode.html  redirect.html  reload.html  schnick.html  settings.html  setup.html  style.css  tree.html  waiting.html
