[package]
name = "fanschnick"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
askama = "0.14.0"
async-stream = "0.3.6"
axum = { version = "0.8.7", features = ["ws"] }
axum-extra = { version = "0.12.2", features = ["typed-header", "cookie"] }
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.3.3", features = ["postgres", "chrono"] }
diesel-async = { version = "0.7.4", features = ["postgres", "bb8"] }
dotenvy = "0.15.7"
either = "1.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.29"
qrcode = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
